--- a/2020-4-13~2020-4-17_work_list.md
+++ b/2020-4-13~2020-4-17_work_list.md
@@ -90,3 +90,127 @@
 * 德胜流程作废按钮逻辑
 * 中原银行-卓鼎流程
 * 陕煤流程从德胜移除到陕煤应用。
+##### 2020-04-20
+* 德胜bug修复
+* 小贷流程测试
+* 卓鼎-中原银行流程部署
+##### 2020-04-21
+* 交易-OA合同业务线逻辑添加
+* 云控小贷流程 升级 
+* 卓鼎-中原银行流程上线staging环境
+* 德胜合同备注字段内消失bug跟踪
+* 陕煤线上流程移除到应用
+* 业务线+合同
+国际事业部
+业务线+合同(合资公司:obj_e1bcc93717a94cb0b152f74c800bfb43)
+发起人:obj_443b2c9c491d49f8af1a55c3fca40d93
+法务:obj_f06c095c7e024b5f9a86a2274f9221a4
+风控:
+业务线+合同:obj_51445ba461864a9aaede69745106a916
+发起人:obj_14bd537b39854d38a0774ecc2b92ff9b
+法务:obj_81fa21f826ce464f9ec04f31aa147543
+法务:obj_2e4e71623d74469e909c3b51244fba2f
+风控:obj_d66006f3fa90407598c88bb79e6eeb1a
+
+煤焦事业部
+业务线+合同(合资公司:obj_1d757183233c4af5a8b0d9328e010c80)
+发起人:obj_5dcc98d00b624de49d0b2e5584c7e992
+法务:obj_b4774a22bb684e39ae7128da4c2c67bb
+风控:obj_0b1296ceef7e4c4c8817a48c76063ee3
+业务线+合同:obj_635b09771bfb41429318824d8dded6e6
+发起人:obj_c833200d54e00001c9a91bc01ce0c4c0
+法务:obj_c833201d1e70000171fb1eaa11501272
+风控:obj_c833202b9de00001c9b3bab08d206bc0
+
+水运事业部
+业务线+合同(合资公司:obj_ccffcb3a18d04bd1b2bcb5269bcc5c8f)
+发起人:obj_4fd83fa027374f7fa87b749f9306d8a6
+法务:obj_4c61d019cfed43d6b596afc15a79407a
+业务线+合同:obj_18b980f2ac4d4808b2f758edf71631b7
+发起人:obj_e4f8f4c2805e401c9965042fcaff4a4f
+法务:obj_4c61d019cfed43d6b596afc15a79407a
+法务:obj_a3e0e4db2dd74ce9952e13e43d40b1b4
+风控:
+
+山西事业部
+业务线+合同(合资公司:obj_c32a271e43d245d588ed2ebfe0ae3c84)
+发起人:obj_a8dde72ea6c54c9584421cc24e42fc93
+法务:obj_3feebd9f8a994e358cd7258766192e18
+风控:obj_c5eae4a1b6cf4604bc5a32c189763193
+业务线+合同:obj_7f5410dac55e4dbba39c6d4d4f87e8b0
+发起人:obj_bd41a8bef845465fa115c0269c613dcc
+法务:obj_9e314992958e4a398db692972e034490
+法务:
+风控:obj_75ad1eb635c849128d3c05d8de53a08d
+
+陕蒙事业部事业部
+业务线+合同(合资公司:obj_e00effdcea6f428fa098850886054b6e)
+发起人:obj_5bba3a56c1e44d4b9f7efdeee792dc17
+法务:obj_1b807fbcc79c4d528ec43fe4d354ff72
+风控:obj_ff27a0d2bd3f416495f618fd87049bbf
+业务线+合同:obj_848957df1ee546cfb0c3b4377e8249ca
+发起人:obj_e59b102273fc48caab3ca0edb759598e
+法务:obj_452c1740e50b4ffe98806314c38a60a6
+风控:obj_c8a561e00680000131639bf02ebff0c0
+
+西北事业部
+业务线+合同(合资公司:obj_bb5fcb36b1e6426e9a8303a23117af12)
+发起人:obj_dd9dedc874f54c739b82858d51b60a44
+法务:obj_f574779feb8c4be581871d6f45196a38
+风控:obj_6768e4e3fa644656a1de885886796d92
+业务线+合同:obj_6cb79dc5746f4af2abfc4a22d383d876(new)
+发起人:obj_238c96996fdb43279fabf44a5e075a25
+分控:obj_4f28f4b907714b8183aba3aae65ec689
+法务:
+
+
+销售中心事业部
+业务线+合同(合资公司:obj_6b73bff938d1431ba9dfa7a424101adbjj)
+发起人:obj_89b7df275ae54b8a9ffa7820a60e6fd0
+法务:obj_799851b41dd442888d2ec55af9caf632
+风控:obj_8ca678b9bed840ad8ab43399443b8f7d
+业务线+合同:obj_4fe84f756ffc44b4833605e295c51ad7(new)
+发起人:obj_4f4fc49e9f8c4168ab6a7181c5cd0dba
+法务:obj_8afe7bf2c3e0472cb5aeca5b2fd6274e
+风控:obj_5076ba85771d4044ac796946ce16d022
+
+##### 上线准备
+1.小贷付款 
+2.卓鼎-中原银行付款
+补填平台打包
+3.财务应用打包
+4.common 应用打包
+
+#### 20200422
+* 人资类应用版本迭代
+* 业务线合同类流程新增回传易煤交易逻辑
+* 报销类流程新增电子发票必填附件校验(瑞茂通所有报销)
+* 结算单流程发起人修改
+* 陕煤付款类流程整理
+* 兴瑞应用业务类流程升级
+#### 20200423
+* 陕煤付款流程
+* 费用报销测试
+#### 20200423
+* 陕煤付款流程上线
+* 费用报销测试上线
+###2020-04-26-2020-04-30
+* 陕煤bo付款表整理、测试、发布上线
+* 德胜流程从合资公司移除 
+* 物产流程版本升级 
+* 兴瑞流程版本迭代
+* 鼎经流程版本迭代
+#### 20200426
+升级小应用
+补填
+德胜
+合资公司
+财务
+shutdown 平台 执行脚本 mv脚本
+重启平台
+####  
+* SAP客商主数据校验增加
+* 德胜平台维护、问题解答
+* 合资公司流程发起逻辑变更需求评审
+* 费用报销流程升级 
+* 陕煤bo付款表测试
