新增合资公司流程

--- a/2020-4-13~2020-4-17_work_list.md
+++ b/2020-4-13~2020-4-17_work_list.md
@@ -9,25 +9,34 @@
 *升级单个合同
 国际事业部 
  单个合同（合资公司）:obj_024815861a5c4cc48978737e845d322d
+ new: obj_8e5dda987406406b951e7d60b966f88f
  单个合同：obj_d3cb37c65db44a9796e1f267da2515c5
 煤焦事业部
  单个合同（合资公司）:obj_1fda0d040f0e40be8558f241fb7ac68a
+ new:obj_e8cfbb6840424841be90b35d48911624
  单个合同：obj_3d81cca2bb084c81b972acc32d0c8fe8
 水运煤事业部
  单个合同（合资公司）:obj_5e125d3127be4cceb74d2ef3e1533719 
+new :obj_509ee996676949f7960acb84fa427617
  单个合同            :obj_4fb5433087a34faaab467d78c13efb6e 
 山西事业部
  单个合同（合资公司）:obj_29767f532d734f2c968766a70d608d2e
+new:obj_54f84be263b041bb82598e7106e6e9d6
  单个合同            :obj_cb8c26d7bbf2444abe39fad08aaf04eb
 陕蒙事业部
  单个合同（合资公司）:obj_90e1329b8796409da9a125a5c47052d0
+new :obj_13df172e519e47eb9186cb47f225df8a
  单个合同：obj_091120f26ab243839b00605b395abf80
 西北事业部
  单个合同（合资公司）:obj_faeaebaf52d34da098a6da040a4063cf
+new :obj_54f84be263b041bb82598e7106e6e9d6
  单个合同 obj_fedd307af990438baf0126ffd3a7a7c3
+
 销售中心业部
  单个合同（合资公司）:obj_0e3b6642be30422884633c52443ee232
+new:obj_4522c8747cec4f8cb66e2830d83f6065
  单个合同：obj_a0f280d690024bc5b2df106548122c1f
+
 * 单个合同变更
 
 国际事业部
@@ -56,21 +65,27 @@
 山西事业部
 合同批量审批：obj_5783a9d66f8f4afca1ed61c0bd46012a
 合同批量审批(合资公司)：obj_2ed8ffe2a91b4822a1ed8db12dd9a74b
+new :obj_3c7bf884bb3f45d0a88062e7156391ac
 国际事业部
 合同批量审批：obj_8901770b0e43492ba3874e3a27182c6a
 合同批量审批(合资公司)：obj_7c707dfcd5754dd3a6553611d13008ee
+new:obj_87bdd9f558934d0ba22cb12621bce030
 煤焦事业部
 合同批量审批：obj_1caba618118a413496a1aeb6a8ee72da
 合同批量审批(合资公司)：obj_ac786e8076a8445ba9a54834df58a7d9
+new :obj_f195859e1bd2443da82751379109d374
 陕蒙事业部
 合同批量审批：obj_d4e4d52c8f844352a1110e163027e8ad
 合同批量审批(合资公司)：obj_639b01a0b7f54ffd93e03f174c0e57da
+new ：obj_e32b07f3f94a43f8ba498ed3de2b0c76
 水运煤事业部
 合同批量审批：obj_09320d0039574e7ba7c43a9340a88281
 合同批量审批(合资公司)：obj_8b0e22f584d0465ab90f74dfef28498e
+new:obj_b9cd4571a2104f37af6ed26d2ab23511
 西北事业部
 合同批量审批： obj_52fcfe1f6c5f4da68eec6edfa61f6c5b
 合同批量审批(合资公司)：obj_7bf27cffd0a04f79a3139480c78c8e59
+new:obj_2258551f93b54712963c92bf683f290b
 销售中心事业部
 合同批量审批：obj_624019e2ea684a1a9bc9b05ab55a2ecc
 合同批量审批(合资公司)：obj_099f190ddc3748faa4dda69829f422f2
@@ -109,6 +124,7 @@
 * 业务线+合同
 国际事业部
 业务线+合同(合资公司:obj_e1bcc93717a94cb0b152f74c800bfb43)
+new :obj_7d6efd2cbf8f4a69a67f4d09794787a9
 发起人:obj_443b2c9c491d49f8af1a55c3fca40d93
 法务:obj_f06c095c7e024b5f9a86a2274f9221a4
 风控:
@@ -120,6 +136,7 @@
 
 煤焦事业部
 业务线+合同(合资公司:obj_1d757183233c4af5a8b0d9328e010c80)
+new：obj_da18946801ce4f4897605dfd454ede41
 发起人:obj_5dcc98d00b624de49d0b2e5584c7e992
 法务:obj_b4774a22bb684e39ae7128da4c2c67bb
 风控:obj_0b1296ceef7e4c4c8817a48c76063ee3
@@ -130,6 +147,7 @@
 
 水运事业部
 业务线+合同(合资公司:obj_ccffcb3a18d04bd1b2bcb5269bcc5c8f)
+new:obj_c7064b219acc4821bac2101ef2e9833f
 发起人:obj_4fd83fa027374f7fa87b749f9306d8a6
 法务:obj_4c61d019cfed43d6b596afc15a79407a
 业务线+合同:obj_18b980f2ac4d4808b2f758edf71631b7
@@ -140,6 +158,7 @@
 
 山西事业部
 业务线+合同(合资公司:obj_c32a271e43d245d588ed2ebfe0ae3c84)
+new:obj_510a2525893242d0be8efacd281ebca8
 发起人:obj_a8dde72ea6c54c9584421cc24e42fc93
 法务:obj_3feebd9f8a994e358cd7258766192e18
 风控:obj_c5eae4a1b6cf4604bc5a32c189763193
@@ -151,6 +170,7 @@
 
 陕蒙事业部事业部
 业务线+合同(合资公司:obj_e00effdcea6f428fa098850886054b6e)
+new ：obj_3c4bcc2a82c34343b22a7458bc397b22
 发起人:obj_5bba3a56c1e44d4b9f7efdeee792dc17
 法务:obj_1b807fbcc79c4d528ec43fe4d354ff72
 风控:obj_ff27a0d2bd3f416495f618fd87049bbf
@@ -161,6 +181,7 @@
 
 西北事业部
 业务线+合同(合资公司:obj_bb5fcb36b1e6426e9a8303a23117af12)
+new :obj_695ba55a758a4ad39c573293f95d9fdb
 发起人:obj_dd9dedc874f54c739b82858d51b60a44
 法务:obj_f574779feb8c4be581871d6f45196a38
 风控:obj_6768e4e3fa644656a1de885886796d92
@@ -172,6 +193,7 @@
 
 销售中心事业部
 业务线+合同(合资公司:obj_6b73bff938d1431ba9dfa7a424101adbjj)
+new :obj_3abbd291c9b64e8ea5c6f74871cbb980
 发起人:obj_89b7df275ae54b8a9ffa7820a60e6fd0
 法务:obj_799851b41dd442888d2ec55af9caf632
 风控:obj_8ca678b9bed840ad8ab43399443b8f7d
