--- a/2020-4-13~2020-4-17_work_list.md
+++ b/2020-4-13~2020-4-17_work_list.md
@@ -34,10 +34,11 @@ new :obj_54f84be263b041bb82598e7106e6e9d6
 
 销售中心业部
  单个合同（合资公司）:obj_0e3b6642be30422884633c52443ee232
-new:obj_4522c8747cec4f8cb66e2830d83f6065
+newobj_0c269c3920744f50ae093649bd11bb90:
  单个合同：obj_a0f280d690024bc5b2df106548122c1f
-
-* 单个合同变更
+new :obj_d36c128ec01b445394ba94ed1fd91aba
+** 
+ 单个合同变更
 
 国际事业部
 单个合同变更：obj_f07fcff6a97845a582294cda0d7b5dfe
@@ -61,9 +62,10 @@ new:obj_4522c8747cec4f8cb66e2830d83f6065
 单个合同变更：obj_22442119fee74d40817fa7659306e7b1
 单个合同变更(合资公司):obj_29900576adb24fdcb8f81f972d15222e
 
-合同批量审批
+** 合同批量审批
 山西事业部
 合同批量审批：obj_5783a9d66f8f4afca1ed61c0bd46012a
+new:obj_13f59a94ad8842d58c7a2e3c26d93f19
 合同批量审批(合资公司)：obj_2ed8ffe2a91b4822a1ed8db12dd9a74b
 new :obj_3c7bf884bb3f45d0a88062e7156391ac
 国际事业部
@@ -123,24 +125,26 @@ new:obj_2258551f93b54712963c92bf683f290b
 * 陕煤线上流程移除到应用
 * 业务线+合同
 国际事业部
-业务线+合同(合资公司:obj_e1bcc93717a94cb0b152f74c800bfb43)
+业务线+合同(合资公司:obj_e1bcc93717a94cb0b152f74c800bfb43) 生产未配置
 new :obj_7d6efd2cbf8f4a69a67f4d09794787a9
 发起人:obj_443b2c9c491d49f8af1a55c3fca40d93
 法务:obj_f06c095c7e024b5f9a86a2274f9221a4
 风控:
 业务线+合同:obj_51445ba461864a9aaede69745106a916
+new:obj_e957479928ac484b889129f1458417d3
 发起人:obj_14bd537b39854d38a0774ecc2b92ff9b
 法务:obj_81fa21f826ce464f9ec04f31aa147543
 法务:obj_2e4e71623d74469e909c3b51244fba2f
 风控:obj_d66006f3fa90407598c88bb79e6eeb1a
 
 煤焦事业部
-业务线+合同(合资公司:obj_1d757183233c4af5a8b0d9328e010c80)
+业务线+合同(合资公司:obj_1d757183233c4af5a8b0d9328e010c80) 生产未配置
 new：obj_da18946801ce4f4897605dfd454ede41
 发起人:obj_5dcc98d00b624de49d0b2e5584c7e992
 法务:obj_b4774a22bb684e39ae7128da4c2c67bb
 风控:obj_0b1296ceef7e4c4c8817a48c76063ee3
 业务线+合同:obj_635b09771bfb41429318824d8dded6e6
+new:obj_557c7a476e224d648f9d7798e398479d
 发起人:obj_c833200d54e00001c9a91bc01ce0c4c0
 法务:obj_c833201d1e70000171fb1eaa11501272
 风控:obj_c833202b9de00001c9b3bab08d206bc0
@@ -151,6 +155,7 @@ new:obj_c7064b219acc4821bac2101ef2e9833f
 发起人:obj_4fd83fa027374f7fa87b749f9306d8a6
 法务:obj_4c61d019cfed43d6b596afc15a79407a
 业务线+合同:obj_18b980f2ac4d4808b2f758edf71631b7
+new :obj_73684540a63e4bb48b65c5df064f18b6
 发起人:obj_e4f8f4c2805e401c9965042fcaff4a4f
 法务:obj_4c61d019cfed43d6b596afc15a79407a
 法务:obj_a3e0e4db2dd74ce9952e13e43d40b1b4
@@ -163,6 +168,7 @@ new:obj_510a2525893242d0be8efacd281ebca8
 法务:obj_3feebd9f8a994e358cd7258766192e18
 风控:obj_c5eae4a1b6cf4604bc5a32c189763193
 业务线+合同:obj_7f5410dac55e4dbba39c6d4d4f87e8b0
+new:obj_0ad098b2370e473cac42e28f33301c4d
 发起人:obj_bd41a8bef845465fa115c0269c613dcc
 法务:obj_9e314992958e4a398db692972e034490
 法务:
@@ -175,6 +181,7 @@ new ：obj_3c4bcc2a82c34343b22a7458bc397b22
 法务:obj_1b807fbcc79c4d528ec43fe4d354ff72
 风控:obj_ff27a0d2bd3f416495f618fd87049bbf
 业务线+合同:obj_848957df1ee546cfb0c3b4377e8249ca
+new : obj_2bc895fb9a694fa3a881e48ced4223df
 发起人:obj_e59b102273fc48caab3ca0edb759598e
 法务:obj_452c1740e50b4ffe98806314c38a60a6
 风控:obj_c8a561e00680000131639bf02ebff0c0
@@ -186,6 +193,7 @@ new :obj_695ba55a758a4ad39c573293f95d9fdb
 法务:obj_f574779feb8c4be581871d6f45196a38
 风控:obj_6768e4e3fa644656a1de885886796d92
 业务线+合同:obj_6cb79dc5746f4af2abfc4a22d383d876(new)
+new:obj_b0e308fc50d043349331945242ce0dc7
 发起人:obj_238c96996fdb43279fabf44a5e075a25
 分控:obj_4f28f4b907714b8183aba3aae65ec689
 法务:
@@ -198,6 +206,7 @@ new :obj_3abbd291c9b64e8ea5c6f74871cbb980
 法务:obj_799851b41dd442888d2ec55af9caf632
 风控:obj_8ca678b9bed840ad8ab43399443b8f7d
 业务线+合同:obj_4fe84f756ffc44b4833605e295c51ad7(new)
+new:obj_334801ebf93040668f9112e174ad8748
 发起人:obj_4f4fc49e9f8c4168ab6a7181c5cd0dba
 法务:obj_8afe7bf2c3e0472cb5aeca5b2fd6274e
 风控:obj_5076ba85771d4044ac796946ce16d022
@@ -284,5 +293,19 @@ shutdown 平台 执行脚本 mv脚本
  >   附件上传
  >    流程标题修复按钮。
 * [易煤交易-补填-OA】附件同步优化](https://www.tapd.cn/58735076/prong/stories/view/1158735076001001928?url_cache_key=a9b265a391497a6a4bb3d7c42ec1355d&action_entry_type=story_tree_list) 
+
+#### 晋煤升级注意事项
+* 合资公司付款流程升级 发布
+
+
+#### 20200615合同流程发布
+* 1.升级相关应用
+ > 升级陕煤应用
+ > 升级财务应用
+ > global  common jar 包替换
+ > 升级补填应用
+ > sql 脚本修改
+ > 视图脚本修改
+ > 合同 批量合同 业务线+合同 最新版本配置
 
 
