--- a/客商文档.md
+++ b/客商文档.md
@@ -6,7 +6,21 @@ SAP客商主数据接口
 > 请求方式：POST<br>
 请求方式URL:域名/cmd=com.awspaas.user.apps.seacher.insert_sap_customer_data
 ### 1.3 请求参数
-字段          | 字段类型  | 字段说明
---------------|:-----------|:-----------
-partnerNumber| String | 合作伙伴号 
+字段          | 字段类型  | 字段长度| 必填| 字段说明
+--------------|:-----------|:-----------|:-----------|:-----------
+partnerNumber| String      |12          | true|      合作伙伴号
+customerMode | String      |12          | true|      类别：K:供应商; D:客户; BP:客户+供应商
+AccountType  | String      |12          | true|      账号类别
+businessPartnerGroup | String      |12  | true|      业务伙伴分组: Z001集团内部客商 Z002集团外部客商 Z003员工客商 Z004财务客商
+businessPartnerGroupDesc| String  |12   |false|      业务伙伴分组描述
+shortName    | String      |12          | true|    简称  
+fullName     | String      |12          | true|       全称  
+customerType | String      |12          | true|     客户类别 
+customerTypeDesc| String   |12          | true|   客户类别描述    
+bankNumber   | String      |12          | true|    银行大行编号 
+associatedLineNumber|String|12          | true|      银行联行号
+subbranchBankName| String  |12          | true|     支行名称 
+bankAccountNumber| String  |12          | true|    开户行账号  
+accountHolder| String      |12          | true|     账户持有人
+socialCreditId| String     |12          | true|     社会统一代码 
 
