添加请求报文

--- a/客商文档.md
+++ b/客商文档.md
@@ -1,10 +1,10 @@
 SAP客商主数据接口
 ## 1.新增客商主数据
 ### 1.1 功能描述
-提供手机号和密码的登录方式
+新增客商
 ### 1.2 请求说明
 > 请求方式：POST<br>
-请求方式URL:域名/cmd=com.awspaas.user.apps.seacher.insert_sap_customer_data
+请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.insert_sap_customer_data
 ### 1.3 请求参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
@@ -23,4 +23,24 @@ subbranchBankName| String  |12          | true|     支行名称
 bankAccountNumber| String  |12          | true|    开户行账号  
 accountHolder| String      |12          | true|     账户持有人
 socialCreditId| String     |12          | true|     社会统一代码 
+#### 1.4 请求报文
+``` json
+{
 
+   {
+    "partnerNumber":"",
+    "customerMode":"",
+    "AccountType":"",
+    "businessPartnerGroup":"",
+    "businessPartnerGroupDesc":"",
+    "shortName":"",
+    "fullName":"",
+    "customerType":"",
+    "customerTypeDesc":
+    "bankNumber":"",
+    "associatedLineNumber":"",
+    "subbranchBankName":"",
+    "bankAccountNumber":"",
+    "accountHolder":"",
+    "socialCreditId ":""
+}}
