--- a/客商文档.md
+++ b/客商文档.md
@@ -35,11 +35,38 @@ socialCreditId| String     |12          | true|     社会统一代码
     "shortName":"",
     "fullName":"",
     "customerType":"",
-    "customerTypeDesc":
+    "customerTypeDesc":"",
     "bankNumber":"",
     "associatedLineNumber":"",
     "subbranchBankName":"",
     "bankAccountNumber":"",
     "accountHolder":"",
     "socialCreditId ":""
+}
+
+### 1.5 返回参数
+字段          | 字段类型  | 字段长度| 必填| 字段说明
+--------------|:-----------|:-----------|:-----------|:-----------
+msg           | String      |12          | true|     错误描述 
+errorCode     | String      |12          | true|     错误描述 
+result        | String      |12          | true|     错误描述 
+data          | String      |12          | true|     错误描述 
+
+> 请求异常报文 
+```  json 
+{
+    "data": {
+        "desc": "付款申请码已经存在 (errorCode='1000')"
+    },
+    "msg": "业务错误(550)",
+    "id": ":RO;",
+    "errorCode": "550",
+    "result": "error"
+}
+>  请求成功报文
+``` json 
+{
+    "msg": "数据新增成功",
+    "id": ":RO;",
+    "result": "ok"
 }
