客商文档修复

--- a/客商文档.md
+++ b/客商文档.md
@@ -23,10 +23,8 @@ subbranchBankName| String  |12          | true|     支行名称
 bankAccountNumber| String  |12          | true|    开户行账号  
 accountHolder| String      |12          | true|     账户持有人
 socialCreditId| String     |12          | true|     社会统一代码 
-#### 1.4 请求报文
-``` json
+### 1.4 请求报文
 {
-
     "partnerNumber":"",
     "customerMode":"",
     "AccountType":"",
@@ -52,8 +50,8 @@ errorCode     | String      |12          | true|     错误描述
 result        | String      |12          | true|     错误描述 
 data          | String      |12          | true|     错误描述 
 
-> 请求异常报文 
-```  json 
+> 异常报文 
+```json 
 {
     "data": {
         "desc": "付款申请码已经存在 (errorCode='1000')"
@@ -63,7 +61,7 @@ data          | String      |12          | true|     错误描述
     "errorCode": "550",
     "result": "error"
 }
->  请求成功报文
+>  成功报文
 ``` json 
 {
     "msg": "数据新增成功",
