新增修改接口

--- a/客商文档.md
+++ b/客商文档.md
@@ -4,7 +4,7 @@ SAP客商主数据接口
 新增客商
 ### 1.2 请求说明
 > 请求方式：POST<br>
-请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.insert_sap_customer_data
+请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.insert_sap_customer
 ### 1.3 请求参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
@@ -51,7 +51,6 @@ result        | String      |12          | true|     错误描述
 data          | String      |12          | true|     错误描述 
 
 > 异常报文 
-```json 
 {
     "data": {
         "desc": "付款申请码已经存在 (errorCode='1000')"
@@ -61,10 +60,53 @@ data          | String      |12          | true|     错误描述
     "errorCode": "550",
     "result": "error"
 }
->  成功报文
-``` json 
+> 成功报文
 {
     "msg": "数据新增成功",
     "id": ":RO;",
     "result": "ok"
 }
+## 2.修改客商主数据
+### 2.1 功能描述
+新增客商
+### 2.2 请求说明
+> 请求方式：POST<br>
+请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.update_sap_customer
+### 2.3 请求参数
+字段          | 字段类型  | 字段长度| 必填| 字段说明
+--------------|:-----------|:-----------|:-----------|:-----------
+partnerNumber| String      |12          |false|      合作伙伴号
+customerMode | String      |12          |false|      类别：K:供应商; D:客户; BP:客户+供应商
+AccountType  | String      |12          |false|      账号类别
+businessPartnerGroup | String |12       |false|      业务伙伴分组: Z001集团内部客商 <br>Z002集团外部客商 <br>Z003员工客商 <br>Z004财务客商
+businessPartnerGroupDesc| String  |12   |false|      业务伙伴分组描述
+shortName    | String      |12          |false|    简称  
+fullName     | String      |12          |false|       全称  
+customerType | String      |12          |false|     客户类别 
+customerTypeDesc| String   |12          |false|   客户类别描述    
+bankNumber   | String      |12          |false|    银行大行编号 
+associatedLineNumber|String|12          |false|      银行联行号
+subbranchBankName| String  |12          |false|     支行名称 
+bankAccountNumber| String  |12          | true|    开户行账号  
+accountHolder| String      |12          |false|     账户持有人
+socialCreditId| String     |12          |false|     社会统一代码 
+### 2.4 请求报文
+{
+    "partnerNumber":"",
+    "customerMode":"",
+    "AccountType":"",
+    "businessPartnerGroup":"",
+    "businessPartnerGroupDesc":"",
+    "shortName":"",
+    "fullName":"",
+    "customerType":"",
+    "customerTypeDesc":"",
+    "bankNumber":"",
+    "associatedLineNumber":"",
+    "subbranchBankName":"",
+    "bankAccountNumber":"123412343",
+    "accountHolder":"",
+    "socialCreditId ":""
+}
+
+
