删除接口新增

--- a/客商文档.md
+++ b/客商文档.md
@@ -68,7 +68,7 @@ data          | String      |12          | true|     错误描述
 }
 ## 2.修改客商主数据
 ### 2.1 功能描述
-新增客商
+修改客商
 ### 2.2 请求说明
 > 请求方式：POST<br>
 请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.update_sap_customer
@@ -91,6 +91,7 @@ bankAccountNumber| String  |12          | true|    开户行账号
 accountHolder| String      |12          |false|     账户持有人
 socialCreditId| String     |12          |false|     社会统一代码 
 ### 2.4 请求报文
+`` json
 {
     "partnerNumber":"",
     "customerMode":"",
@@ -108,5 +109,22 @@ socialCreditId| String     |12          |false|     社会统一代码
     "accountHolder":"",
     "socialCreditId ":""
 }
+
+## 3.删除客商主数据
+### 2.1 功能描述
+删除客商
+### 2.2 请求说明
+> 请求方式：POST<br>
+请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.delete_sap_customer
+### 2.3 请求参数
+字段          | 字段类型  | 字段长度| 必填| 字段说明
+--------------|:-----------|:-----------|:-----------|:-----------
+bankAccountNumber| String  |12          | true|    开户行账号  
+### 2.4 请求报文
+``` json
+{
+    "bankAccountNumber":"123412343",
+}
+
 
 
