--- a/客商文档.md
+++ b/客商文档.md
@@ -24,6 +24,7 @@ bankAccountNumber| String  |12          | true|    开户行账号
 accountHolder| String      |12          | true|     账户持有人
 socialCreditId| String     |12          | true|     社会统一代码 
 ### 1.4 请求报文
+``` json
 {
     "partnerNumber":"",
     "customerMode":"",
@@ -41,7 +42,7 @@ socialCreditId| String     |12          | true|     社会统一代码
     "accountHolder":"",
     "socialCreditId ":""
 }
-
+```
 ### 1.5 返回参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
@@ -51,6 +52,7 @@ result        | String      |12          | true|     错误描述
 data          | String      |12          | true|     错误描述 
 
 > 异常报文 
+``` json
 {
     "data": {
         "desc": "付款申请码已经存在 (errorCode='1000')"
@@ -60,12 +62,15 @@ data          | String      |12          | true|     错误描述
     "errorCode": "550",
     "result": "error"
 }
+```
 > 成功报文
+``` json
 {
     "msg": "数据新增成功",
     "id": ":RO;",
     "result": "ok"
 }
+```
 ## 2.修改客商主数据
 ### 2.1 功能描述
 修改客商
@@ -91,7 +96,7 @@ bankAccountNumber| String  |12          | true|    开户行账号
 accountHolder| String      |12          |false|     账户持有人
 socialCreditId| String     |12          |false|     社会统一代码 
 ### 2.4 请求报文
-`` json
+``` json
 {
     "partnerNumber":"",
     "customerMode":"",
@@ -109,7 +114,7 @@ socialCreditId| String     |12          |false|     社会统一代码
     "accountHolder":"",
     "socialCreditId ":""
 }
-
+```
 ## 3.删除客商主数据
 ### 2.1 功能描述
 删除客商
