--- a/客商文档.md
+++ b/客商文档.md
@@ -3,8 +3,11 @@ SAP客商主数据接口
 ### 1.1 功能描述
 新增客商
 ### 1.2 请求说明
+> 请求方式URL
+   * 生产：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.insert_sap_customer
+   * staing：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.insert_sap_customer
+   * 测试：http://192.168.80.26:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.insert_sap_customer
 > 请求方式：POST<br>
-请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.insert_sap_customer
 ### 1.3 请求参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
@@ -75,8 +78,11 @@ data          | String      |12          | true|     错误描述
 ### 2.1 功能描述
 修改客商
 ### 2.2 请求说明
+> 请求方式URL
+   * 生产：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.update_sap_customer
+   * staing：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.update_sap_customer
+   * 测试：http://192.168.80.26:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.update_sap_customer
 > 请求方式：POST<br>
-请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.update_sap_customer
 ### 2.3 请求参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
@@ -120,7 +126,10 @@ socialCreditId| String     |12          |false|     社会统一代码
 删除客商
 ### 2.2 请求说明
 > 请求方式：POST<br>
-请求方式URL:域名/cmd=com.awspaas.user.apps.searcher.delete_sap_customer
+> 请求方式URL
+   * 生产：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.delete_sap_customer
+   * staing：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.delete_sap_customer
+   * 测试：http://192.168.80.26:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.delete_sap_customer
 ### 2.3 请求参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
