--- a/客商文档.md
+++ b/客商文档.md
@@ -6,14 +6,14 @@ SAP客商主数据接口
 > 请求方式：POST<br>
 > 请求方式URL
    * 生产：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.insert_sap_customer
-   * staing：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.insert_sap_customer
+   * staging：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.insert_sap_customer
    * 测试：http://192.168.80.26:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.insert_sap_customer
 ### 1.3 请求参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
 partnerNumber| String      |10          | true|      合作伙伴号
 customerMode | String      |2          | true|      类别：K:供应商; D:客户; BP:客户+供应商
-AccountType  | String      |1          | true|      账号类别
+accountType  | String      |1          | true|      账号类别:0:个人;1:公司
 businessPartnerGroup | String |4  | true|      业务伙伴分组: Z001集团内部客商 Z002集团外部客商 Z003员工客商 Z004财务客商
 businessPartnerGroupDesc| String  |15   |false|      业务伙伴分组描述
 shortName    | String      |20          | true|    简称  
@@ -23,7 +23,7 @@ customerTypeDesc| String   |50          | true|   客户类别描述
 bankNumber   | String      |6          | true|    银行大行编号 
 associatedLineNumber|String|15          | true|      银行联行号
 subbranchBankName| String  |60          | true|     支行名称 
-bankAccountNumber| String  |28          | true|    开户行账号  
+bankAccountNumber| String  |28          | true|    开户行账号 (唯一性校验) 
 accountHolder| String      |100          | true|     账户持有人
 socialCreditId| String     |18          | true|     社会统一代码 
 ### 1.4 请求报文
@@ -31,7 +31,7 @@ socialCreditId| String     |18          | true|     社会统一代码
 {
     "partnerNumber":"",
     "customerMode":"",
-    "AccountType":"",
+    "accountType":"",
     "businessPartnerGroup":"",
     "businessPartnerGroupDesc":"",
     "shortName":"",
@@ -81,32 +81,33 @@ data          | String      |2000        | false |    请求错误时获取 data
 > 请求方式：POST<br>
 > 请求方式URL
    * 生产：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.update_sap_customer
-   * staing：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.update_sap_customer
+   * staging：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.update_sap_customer
    * 测试：http://192.168.80.26:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.update_sap_customer
 ### 2.3 请求参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
-partnerNumber| String      |12          |false|      合作伙伴号
-customerMode | String      |12          |false|      类别：K:供应商; D:客户; BP:客户+供应商
-AccountType  | String      |12          |false|      账号类别
-businessPartnerGroup | String |12       |false|      业务伙伴分组: Z001集团内部客商 <br>Z002集团外部客商 <br>Z003员工客商 <br>Z004财务客商
-businessPartnerGroupDesc| String  |12   |false|      业务伙伴分组描述
-shortName    | String      |12          |false|    简称  
-fullName     | String      |12          |false|       全称  
-customerType | String      |12          |false|     客户类别 
-customerTypeDesc| String   |12          |false|   客户类别描述    
-bankNumber   | String      |12          |false|    银行大行编号 
-associatedLineNumber|String|12          |false|      银行联行号
-subbranchBankName| String  |12          |false|     支行名称 
-bankAccountNumber| String  |12          | true|    开户行账号  
-accountHolder| String      |12          |false|     账户持有人
-socialCreditId| String     |12          |false|     社会统一代码 
+partnerNumber| String      |10          |false |      合作伙伴号
+customerMode | String      |2          |false |      类别：K:供应商; D:客户; BP:客户+供应商
+accountType  | String      |1          |false |      账号类别:0:个人;1:公司
+businessPartnerGroup | String |4       |false |      业务伙伴分组: Z001集团内部客商 Z002集团外部客商 Z003员工客商 Z004财务客商
+businessPartnerGroupDesc| String  |15   |false|      业务伙伴分组描述
+shortName    | String      |20          |false |    简称  
+fullName     | String      |80          |false |       全称  
+customerType | String      |10          |false |     客户类别 
+customerTypeDesc| String   |50          | false|   客户类别描述    
+bankNumber   | String      |6          |false |    银行大行编号 
+associatedLineNumber|String|15          |false|      银行联行号
+subbranchBankName| String  |60          | false|     支行名称 
+bankAccountNumber| String  |28          | true|    开户行账号 (唯一性校验) 
+accountHolder| String      |100          |false|     账户持有人
+socialCreditId| String     |18          | false|     社会统一代码 
+
 ### 2.4 请求报文
 ``` json
 {
     "partnerNumber":"",
     "customerMode":"",
-    "AccountType":"",
+    "accountType":"",
     "businessPartnerGroup":"",
     "businessPartnerGroupDesc":"",
     "shortName":"",
@@ -124,24 +125,24 @@ socialCreditId| String     |12          |false|     社会统一代码
 ### 2.5 返回参数(同1.5)
 
 ## 3.删除客商主数据
-### 2.1 功能描述
+### 3.1 功能描述
 删除客商
-### 2.2 请求说明
+### 3.2 请求说明
 > 请求方式：POST<br>
 > 请求方式URL
    * 生产：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.delete_sap_customer
-   * staing：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.delete_sap_customer
+   * staging：http://192.168.80.27:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.delete_sap_customer
    * 测试：http://192.168.80.26:8088/portal/r/jd?cmd=com.awspaas.user.apps.searcher.delete_sap_customer
-### 2.3 请求参数
+### 3.3 请求参数
 字段          | 字段类型  | 字段长度| 必填| 字段说明
 --------------|:-----------|:-----------|:-----------|:-----------
-bankAccountNumber| String  |12          | true|    开户行账号  
-### 2.4 请求报文
+bankAccountNumber| String  |28          | true|    开户行账号  
+### 3.4 请求报文
 ``` json
 {
     "bankAccountNumber":"123412343",
 }
 
 ```
-### 2.4444 返回参数(同1.5)
+### 3.5 返回参数(同1.5)
 
