个人简历提交

--- a/2020-4-13~2020-4-17_work_list.md
+++ b/2020-4-13~2020-4-17_work_list.md
@@ -308,4 +308,42 @@ shutdown 平台 执行脚本 mv脚本
  > 视图脚本修改
  > 合同 批量合同 业务线+合同 最新版本配置
 
+ ##### 20200629
+* global 打包 
+* 财务应用打包
+  > 运营节点加可审批
+   BO_EU_CONTRACT 易煤交易单号字段移除
+* 补填应用打包
+* 陕煤应用打包
+## 补填最新流程
+* 煤焦：obj_0e30c2cfa41245298c829d44af1471d3
+* 销售中心：obj_f3e6bb0ddbcc494984b814b36649c147 
+* 陕蒙：obj_c5d9d9798a1742d09a2de1244aba6d44
+* 山西：obj_d1c40836b518415eaf121f6bc57c88d5
+* 西北：obj_4f520409f5cb4f7796455a8c7cbe2bd6
+* 国际：obj_096d350dc1164165b4e7909e4fd865fd
+*
+#### 快速平账
+* obj_9ee19f667a124b7f8752c69a28379746
+* 销售中心：obj_f97da1afed5f4b5b95207ffb2e5d59fe
+* 陕蒙事业部：obj_ee1548bc16ef4bee8fd5c16e143fb513
+* 山西事业部：obj_408cf79559e24904b8041c62c44f19e8
+* 西北事业部：obj_2e670765d62049e38d71e4e079c892a5
+* 国际事业部:obj_6729eaa184224f6dbac3ac569506ae93
+
+##### 
+1.调用预览aslp 报错原因查找
+2.新建SAP dw 无效查找 增加回调机制
+3.平账流程方案写死发布流程
+4.合同变更流程路由条件修改
+5.合同变更流程copy到陕煤jm 子流程
+4.合同变更流程路由条件修改
+#####
+* seacher 应用打包发布
+* 财务2 打包发布
+* common 包替换
+* 变更合同配置脚本执行
+
+
+#####
 
