--- a/陆彪个人简历.md
+++ b/陆彪个人简历.md
@@ -1,4 +1,14 @@
-##### 个人简历
+#### 个人简历
+#### 基本信息
 * 姓名:陆彪      联系电话:183218057573
 * 出生日期：19910112  婚姻状况: 已婚
+* 个人优势：善于沟通、能独挡一面
+#### 工作经历
+* 上海瑞茂通供应链管理有限公司  2017-07~ 至今
+*  所在部门：易煤网技术部 Java 开发工程师
+* 工作内容：
+  > 企业内部系统开发维护
+  > 企业OA系统开发（北京炎黄盈动BPMN OA）
+  > 对接资金系统、SAP
+
 
