个人文件提交

--- a/2020-4-13~2020-4-17_work_list.md
+++ b/2020-4-13~2020-4-17_work_list.md
@@ -5,15 +5,15 @@
 * ####[小贷-易煤交易上线]()
 
 
-#####2020414
+#####202041
 *升级单个合同
 国际事业部 
  单个合同（合资公司）:obj_024815861a5c4cc48978737e845d322d
- new: obj_8e5dda987406406b951e7d60b966f88f
+ new:obj_b6892915bbc64ead94e7c4ded4046d3f
  单个合同：obj_d3cb37c65db44a9796e1f267da2515c5
 煤焦事业部
  单个合同（合资公司）:obj_1fda0d040f0e40be8558f241fb7ac68a
- new:obj_e8cfbb6840424841be90b35d48911624
+ new :obj_93a4e22bab9e443387274419c47c2b1f
  单个合同：obj_3d81cca2bb084c81b972acc32d0c8fe8
 水运煤事业部
  单个合同（合资公司）:obj_5e125d3127be4cceb74d2ef3e1533719 
@@ -345,5 +345,40 @@ shutdown 平台 执行脚本 mv脚本
 * 变更合同配置脚本执行
 
 
-#####
+##### 20200804
+###### 讲解为何这么配置
+* bepatch
+* 导入顺序(为何这样导入)
+* git 操作
 
+##### 工作计划
+* 煤焦钢事业部流程修改：
+   > 1、所有过路总的节点改为群立总（集团分管领导这一步）
+   > 2、合资公司用款流程需要在运营这一节点新增抄送——吴垚、姬承医
+   > 3、合资公司付款，中平付款流程把最后一步办理节点——侯飞龙取消
+   > 4、所有业务用款流程把运营的节点调整到风控王文龙后面。
+   (已配置)      快速平账流程：obj_04a4f12be207453284e219403c51fb31
+    (已配置) 业务小贷用款：obj_9df761b532034689b105f6c3bc3852f0
+         (财务)煤焦OA发起爱建资金付款：obj_18fa0370f13c4313af4f340295c8c5c1
+         (财务)煤焦合资公司业务付款:obj_7092766bfe674352a9e9117274401fff  
+         (财务) 业务用款类（小贷业务）  obj_c8f3b5567861418a8a1a8050a39bce42 
+         (财务) 业务用款类（中平金融） obj_c033e6e6f2be41ee8b118b8e03e8e68d 
+         (财务) 业务用款类（中瑞财富） obj_2a1d6e501feb4b5ab1a10840498cf409 
+
+   > 5、用章流程把运营的节点调整到风控王文龙后面。
+   > 6、合同会签流程把运营的节点调整到风控王文龙后面。
+合同会签流程（单个、批量、业务线+合同、变更）在财务负责人前面新增审批节点——易煤财务（王梦洋），注意有易煤单号的流程才过易煤财务。
+      > * 单个合同：
+         > 合资公司:obj_a15d57b8795148aba467eeb0c2b15efe
+         > normal:obj_0489c7cae00e42098c1defde076024a1 
+      > * 批量合同：
+         > 合资公司:obj_6828894fd1e64689bd2af5929628287e
+         > normal:obj_5c92d0cf2bbc42b0891cb2019c0bff4d 
+      > * 合同变更：
+         > 合资公司:obj_2193fa6bdd904ae0b3d2e7789f39c4ec
+         > normal:obj_2db24d76616c474ba44b3aa344f86368 
+      > * 合同+业务线：
+         > 合资公司:obj_6efc27a95a2c4330835acc4c4cadaf1a
+         > normal:obj_fa83be39377e4552a62f9bb3176fcfcd 
+* 其他各事业部易煤财务节点变更：
+   > 参与者从   梁静  都变更为   王梦洋
