--- a/陆彪个人简历.md
+++ b/陆彪个人简历.md
@@ -1,14 +1,74 @@
-#### 个人简历
+### 个人简历
 #### 基本信息
-* 姓名:陆彪      联系电话:183218057573
-* 出生日期：19910112  婚姻状况: 已婚
+* 姓名：陆彪      联系电话：183218057573
+* 出生日期：19910112 
+* 婚姻状况：已婚
+* 毕业院校：湖南人文科技学院  
+* 专业：电子信息工程
+* 学历： 全日制本科（2010~2014）
 * 个人优势：善于沟通、能独挡一面
+* 相关证件：PMP项目管理认证
+* 自我评定：
+   * 热情、积极主动、有责任心、协调能力强、沟通能力强、有耐心。 
+   * 了解bpmn规范
+   * 能熟练操作Unix服务器、熟练使用常用服务器命令
 #### 工作经历
-* 上海瑞茂通供应链管理有限公司  2017-07~ 至今
- >*  所在部门：易煤网技术部 Java 开发工程师
- >* 工作内容：
-  >* 企业内部系统开发维护
-  >*  企业OA系统开发（北京炎黄盈动BPMN OA）
-  >*  对接资金系统、SAP
+* 上海瑞茂通供应链管理有限公司  2017-08~ 至今
+   *  所在部门：易煤网技术部 OA项目主管 
+   * 工作内容：
+      1.  企业OA系统技术选型、开发（北京炎黄盈动BPMN OA）
+      2.  企业内部系统开发维护
+      3.  对接资金系统、SAP
 
+* 上海响泉金融信息服务有限公司  2016-10~ 201707 
+   *  所在部门：技术部 移动端项目负责人
+   * 工作内容：
+      1.  负责宜泉资本理财APP开发、参与需求分析、技术选型、任务分配、进度管理 
+      2.  负责安卓paid版本应用开发：供B端业务人员使用
 
+* 上海合星金融信息服务有限公司  2014-10~ 2016~10 
+   *  所在部门： 技术部移动端项目负责人
+   * 工作内容：
+      1.  项目技术选型 
+      2.  关键模块开发 
+      3.  进度、需求把控 
+#### 项目信息
+* AWSPASS OA系统开发（二次开发）2018-03-至今
+    * 使用技术
+       * bpmn流程管理体系:事件、 网关、信号等
+       * java、spring mvc、springboot、mysql、js
+    * 工作内容
+       * 参加项目经理完成需求梳理、项目进度把控、任务分配等
+       * 对接外部系统：SAP、九恒星资金系统、内部云控小贷系统、交易系统等 
+       * 流程部署、迭代，系统测试、用户培训、系统维护。 
+      
+* 供应链金融财务核算系统 2017-08 ~ 2018-03
+    * 项目描述 
+       * 根据业务需求对公司，对业务流录入。发票信息管理。业务报表导入导出。
+    * 使用技术
+       * spring boot、 mysql 
+    * 工作内容
+       * 根据产品PRD完成开发 
+
+* 怡泉资本APP 开发迭代 2016-10 ~ 201707 
+    * 工作内容
+       * 负责App软件研发工作
+       * 公司内部项目需求文档编写 
+       * 研究新技术满足客户需求 
+       * 根据开发中遇到的问题对产品提出改进建议 
+ 
+* 理财屋APP开发、迭代  2014-10 ~ 201607 
+    * 项目描述
+       * app具有以下功能
+           1、支持购买定期理财产品，P2P/票据/保理等；
+           2、支持红包支付；
+           3、支持账户余额理财，低门槛高收益；
+           4、通过手机提现，管理银行卡；
+           5、查询个人资产账户信息；
+           6、查询交易记录以及回款情况 
+    * 工作内容
+       * 1、负责app端接口文档编写
+       * 2、与产品经理进行需求评审，以及需求细化。
+       * 3、app进度排期；
+       * 4、android App框架的搭建及功能实现；
+       * 5、对产品持续追踪，修复bug，提升用户体验 
